<resources>
    <string name="app_name">Timon</string>
    <string name="sign_up">Registrate</string>
    <string name="sign_in">Ingresa</string>
    <string name="text_password">Contraseña</string>
    <string name="text_email_user">Correo o Usuario</string>
    <string name="user_name_lastname">Nombre Completo</string>
    <string name="user_nick">Nombre de usuario</string>
    <string name="email">Correo</string>
    <string name="bg_img">fondo</string>
    <string name="lorem">Lorem ipsum dolor sit amet consts</string>

    <string-array name="options">
        <item>Hoy</item>
        <item>Semanal</item>
        <item>Mensual</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
