<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/title_sign_up"
        android:text="@string/sign_up"
        android:layout_marginBottom="12dp"
        android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/names"
        android:layout_below="@id/title_sign_up"
        android:hint="@string/user_name_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/user_name"
        android:hint="@string/user_nick"
        android:layout_below="@id/names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_below="@id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/text_password"
        android:layout_below="@id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"/>

</RelativeLayout>