<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FF5F5F">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="90sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/anton"
        android:gravity="left"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Material.Display3"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textColor="@android:color/white"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/opensanslight"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:gravity="left"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:layout_below="@id/text_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingEnd="35dp"
        android:paddingStart="35dp">

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/opensans"
            android:background="@drawable/bg_btn_sign_up"
            android:text="@string/sign_up"
            style="?android:buttonBarButtonStyle"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/opensans"
            android:background="@drawable/bg_btn_sign_in"
            android:text="@string/sign_in"
            style="?android:buttonBarButtonStyle"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>